--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>The Universe</title>
+		<title>Shapes</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>The Big Bang 3d</h1>
+			<h1>Starfield</h1>
 		</header>
 			<section id="content">
-				<canvas id="Starfield" data-processing-sources="Starfield.pde">
+				<canvas id="sphere" data-processing-sources="sphere/sphere.pde">
 				</canvas>
 		    </section>
 	    <footer>
