--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 		<header>
 			<h1>Starfield</h1>
 		</header>
+		<button>Sphere</button>
+		<button>Cone</button>
+		<button>Cube</button>
+		<button>Cylinder</button>
 			<section id="content">
 				<canvas id="sphere" data-processing-sources="sphere/sphere.pde">
 				</canvas>
