--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 			<section id="content">
 				<canvas id="sphere" data-processing-sources="sphere/sphere.pde">
 				</canvas>
+				<canvas id="cone" data-processing-sources="cone/cone.pde">
+				</canvas>
+				<canvas id="cube" data-processing-sources="cone/cone.pde">
+				</canvas>
+				<canvas id="cylinder" data-processing-sources="cone/cone.pde">
+				</canvas>
 		    </section>
 	    <footer>
 		    Try moving your mouse over the simulation!
