--- a/index.html
+++ b/index.html
@@ -14,22 +14,29 @@
 		<script>
 		function hideAll(){
 			var displays = document.getElementsByTagName("CANVAS");
-	    	for(var i = 0; i < displays; i++){
-	    		displays[i].remove();
+	    	for(var i = 0; i < displays.length(); i++){
+	    		displays[0].remove();
+	    		i--;
 	   		}
+   		}
+   		function showSphere(){
+   			hideAll();
+			var canv = document.createElement("CANVAS");
+			canv.setAttribute("data-processing-sources", "cone/cone.pde");
+			document.getElementById("content").appendChild(canv);
    		}
    		function showCone(){
    			hideAll();
 			var canv = document.createElement("CANVAS");
 			canv.setAttribute("data-processing-sources", "cone/cone.pde");
+			document.getElementById("content").appendChild(canv);
    		}
 		</script>
-		<button onclick = "function() {
-			showCone();
-		}">Sphere</button>
+		<button onclick = "showCone()";>Sphere</button>
 		<button onclick = "hideAll()" >Cone</button>
 		<button onclick = "hideAll()">Cube</button>
 		<button onclick = "hideAll()">Cylinder</button>
+		
 			<section id="content">
 				<canvas id="sphere" data-processing-sources="sphere/sphere.pde">
 				</canvas>
@@ -40,6 +47,7 @@
 				<canvas id="cylinder" data-processing-sources="cylinder/cylinder.pde">
 				</canvas>
 		    </section>
+		
 	    <footer>
 		    Try moving your mouse over the simulation!
 	    </footer>
