--- a/index.html
+++ b/index.html
@@ -34,25 +34,17 @@
 		<header>
 			<h1>Starfield</h1>
 		</header>
-		
-		<button onclick = "showCone()";>Sphere</button>
-		<button onclick = "hideAll()" >Cone</button>
-		<button onclick = "hideAll()">Cube</button>
-		<button onclick = "hideAll()">Cylinder</button>
-
 			<section id="content">
-				<canvas id="sphere" data-processing-sources="sphere/sphere.pde">
-				</canvas>
-				<canvas id="cone" data-processing-sources="cone/cone.pde">
-				</canvas>
-				<canvas id="cube" data-processing-sources="cube/cube.pde">
-				</canvas>
-				<canvas id="cylinder" data-processing-sources="cylinder/cylinder.pde">
+				<canvas id="sphere" data-processing-sources="Starfield.pde">
 				</canvas>
 		    </section>
 		
 	    <footer>
-		    Try moving your mouse over the simulation!
+		    Try moving your mouse over the simulation! 
+	    </footer>
+	    <br>
+	    <footer>
+		    Press space for a new animation, and click to reload!
 	    </footer>
 	</body>
 </html>
